# html5-parser

./: .appveyor.yml  .gitignore  .travis.yml  =template.py  MANIFEST.in  README.rst  benchmark.py  build.py  genattrs.py  genencodings.py  gentags.py  mem-leak-check.c  publish.py  pyproject.toml  run_tests.py  session.vim  setup.cfg  setup.py  test.c  unix_build.py  win-ci.py
.github/workflows/: ci.py  ci.yml  win-ci.py
docs/: Makefile  conf.py  index.rst
gumbo/: attribute.c  char_ref.c  char_ref.rl  error.c  gentags.py  gumbo.h  gumbo_edit.c  gumbo_edit.h  parser.c  replacement.h  string_buffer.c  string_piece.c  svg_attrs.c  svg_attrs.gperf  svg_tags.c  svg_tags.gperf  tag.c  tag.in  tag_enum.h  tag_perf.h  tag_sizes.h  tag_strings.h  tokenizer.c  utf8.c  utf8.h  util.c  util.h  vector.c
html5_parser/: __init__.py  encoding_parser.py
src/: as-libxml.c  as-libxml.h  as-python-tree.c  as-python-tree.h  attr_enum.h  attr_perf.h  attr_sizes.h  attr_strings.h  data-types.h  gumbo-libxml.c  python-wrapper.c  stack.h
src/html5_parser/: __init__.py  dom.py  encoding_parser.py  soup.py  stdlib_etree.py
test/: __init__.py  adapt.py  basic.py  html5lib_adapter.py  malformed.py  namespace.py  soup.py
