[metadata]
name = html5-parser
version = 0.4.12
author = Kovid Goyal
author_email = redacted@acme.com
description = Fast C based HTML 5 parsing for python
license = Apache 2.0
url = https://html5-parser.readthedocs.io
platforms = any
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: XML

[options]
package_dir =
   =src
packages = html5_parser
install_requires = 
    chardet
    lxml>=3.8.0

[options.extras_require]
soup = beautifulsoup4

[flake8]
max-line-length = 100

[yapf]
based_on_style = pep8
column_limit = 100
split_penalty_import_names = 100
dedent_closing_brackets = True
coalesce_brackets = True
blank_line_before_nested_class_or_def = True

[isort]
combine_as_imports = True
line_length = 100
multi_line_output = 5
known_future_library = __python__
